--- a/single-price-grid-component-master/stylesheet.css
+++ b/single-price-grid-component-master/stylesheet.css
@@ -61,7 +61,7 @@ button {
   color: white;
   text-align: center;
   justify-content: center;
-  background-color: green;
+  background-color:hsl(71, 73%, 54%);
   width: 100%;
   border-collapse: collapse;
   padding: 0.75rem;
